[gd_scene load_steps=4 format=3 uid="uid://b86v1lwaqeea2"]

[ext_resource type="Script" path="res://scripts/character_generations.gd" id="1_twirs"]
[ext_resource type="PackedScene" uid="uid://bd11ec50fhc2a" path="res://prefabs/character.tscn" id="2_xt5pk"]
[ext_resource type="LabelSettings" uid="uid://cc4luhxpmp6qc" path="res://themes/my_label_settings.tres" id="3_4aib1"]

[node name="character_generations" type="Node2D"]
script = ExtResource("1_twirs")

[node name="character" parent="." instance=ExtResource("2_xt5pk")]
position = Vector2(475, 335)

[node name="Button" type="Button" parent="."]
offset_left = 593.0
offset_top = 328.0
offset_right = 690.0
offset_bottom = 359.0
text = "change gen"

[node name="dying_button" type="Button" parent="."]
offset_left = 595.0
offset_top = 376.0
offset_right = 692.0
offset_bottom = 407.0
text = "dying"

[node name="last_gen_label" type="Label" parent="."]
visible = false
offset_left = 388.0
offset_top = 167.0
offset_right = 759.0
offset_bottom = 212.0
text = "This is the last generation"
label_settings = ExtResource("3_4aib1")

[connection signal="last_generation" from="character" to="." method="_on_character_last_generation"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="dying_button" to="." method="_on_dying_button_button_down"]
[connection signal="button_up" from="dying_button" to="." method="_on_dying_button_button_up"]
